syntax = "proto3";

package payments;

option go_package = "/internal/payments";


service PaymentsGrpc {
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse) {}
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse) {}
  rpc GetAllPayments(GetAllPaymentsRequest) returns (GetAllPaymentsResponse) {}
  rpc UpdatePayment(UpdatePaymentRequest) returns (UpdatePaymentResponse) {}
}

message GetPaymentRequest {
  string id = 1;
}

message GetPaymentResponse {
  string id = 1;
  double amount = 2;
  string status = 3;
  string user = 4;
  string description = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreatePaymentRequest {
  double amount = 1;
  string description = 2;
  string user = 3;
}

message CreatePaymentResponse {
  string id = 1;
  double amount = 2;
  string description = 3;
  string status = 4;
  string created_at = 5;
  string updated_at = 6;
  string user = 7;
}

message GetAllPaymentsRequest {}

message GetAllPaymentsResponse {
  repeated GetPaymentResponse payments = 1;
}

message UpdatePaymentRequest {
  string id = 1;
  string status = 2;
}

message UpdatePaymentResponse {
  string message = 1;
}

